--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">UserFinder</string>
+    <string name="search_user_name_hint">Search user name</string>
+    <string name="search">Search</string>
 </resources>
